--- a/src/Mod03-WebApplications.HttpPipelineWebApp/Mod03-WebApplications.HttpPipelineWebApp.csproj
+++ b/src/Mod03-WebApplications.HttpPipelineWebApp/Mod03-WebApplications.HttpPipelineWebApp.csproj
@@ -59,25 +59,29 @@
     <Content Include="Content\button-login.jpg" />
     <Content Include="Content\members-login-right.jpg" />
     <Content Include="Content\Site.css" />
-    <Content Include="Default.html" />
+    <Content Include="private\Default.html" />
     <Content Include="Global.asax" />
-    <Content Include="RequestTimeTemplate.htm" />
+    <Content Include="public\Default.html" />
+    <Content Include="RequestTime\RequestTimeTemplate.htm" />
     <Content Include="Images\uwwp 01.jpg" />
     <Content Include="Images\uwwp 02.jpg" />
     <Content Include="Images\uwwp 03.jpg" />
     <Content Include="Images\uwwp 04.jpg" />
-    <Content Include="Login.html" />
-    <Content Include="Web.config" />
+    <Content Include="public\Login.html" />
+    <Content Include="Web_.config" />
     <Content Include="WebForm1.aspx" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Auth\AuthenticationModule.cs" />
+    <Compile Include="Auth\LoginHandler.cs" />
+    <Compile Include="Auth\MyAuthentication.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RequestInfo.cs" />
-    <Compile Include="RequestTimeHandler.cs" />
-    <Compile Include="RequestTimeModule.cs" />
+    <Compile Include="RequestTime\RequestInfo.cs" />
+    <Compile Include="RequestTime\RequestTimeHandler.cs" />
+    <Compile Include="RequestTime\RequestTimeModule.cs" />
     <Compile Include="WebForm1.aspx.cs">
       <DependentUpon>WebForm1.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -94,6 +98,19 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="web.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="web.Debug.config">
+      <DependentUpon>web.config</DependentUpon>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="web.Release.config">
+      <DependentUpon>web.config</DependentUpon>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
