--- a/src/Mod03-WebApplications.HttpPipelineWebApp/Web.config
+++ b/src/Mod03-WebApplications.HttpPipelineWebApp/Web.config
@@ -1,47 +1,12 @@
 ﻿<?xml version="1.0"?>
 <configuration>
-  <appSettings/>
-  <connectionStrings/>
-  <system.web>
-    <!-- 
-            Set compilation debug="true" to insert debugging 
-            symbols into the compiled page. Because this 
-            affects performance, set this value to true only 
-            during development.
-        -->
-    <compilation debug="true" targetFramework="4.0"/>
-    <!--
-            The <authentication> section enables configuration 
-            of the security authentication mode used by 
-            ASP.NET to identify an incoming user. 
-        -->
-    <authentication mode="Windows"/>
-    <!--
-            The <customErrors> section enables configuration 
-            of what to do if/when an unhandled error occurs 
-            during the execution of a request. Specifically, 
-            it enables developers to configure html error pages 
-            to be displayed in place of a error stack trace.
 
-        <customErrors mode="RemoteOnly" defaultRedirect="GenericErrorPage.htm">
-            <error statusCode="403" redirect="NoAccess.htm" />
-            <error statusCode="404" redirect="FileNotFound.htm" />
-        </customErrors>
-        -->
-	  <httpModules>
-		  <add name="RequestTimeModule" type="Mod03_WebApplications.ThumbsAndWatermarking.WebApp.RequestTimeModule"/>
-	  </httpModules>
-	  <httpHandlers>
-		  <add verb="GET" path="getWmImg" type="Mod03_WebApplications.ThumbsAndWatermarking.ThumbsAndWaterMarkHandler"/>
-		  <add verb="*" path="*.spf" type="Mod03_WebApplications.ThumbsAndWatermarking.WebApp.RequestTimeHandler"/>
-	  </httpHandlers>
-	  <pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID"/>
-  </system.web>
-  <!-- 
-        The system.webServer section is required for running ASP.NET AJAX under Internet
-        Information Services 7.0.  It is not necessary for previous version of IIS.
-    -->
-  <system.webServer>
-    <validation validateIntegratedModeConfiguration="false"/>
-  </system.webServer>
+	<system.web>
+		<compilation debug="true" targetFramework="4.0" />
+		<httpHandlers>
+			<add verb="GET" path="getWmImg" type="Mod03_WebApplications.ThumbsAndWatermarking.ThumbsAndWaterMarkHandler"/>
+			<!--<add verb="GET" path="getWmImg" type="Mod03_WebApplications.ThumbsAndWatermarking.WaterMarkHandlerFactory"/>-->
+		</httpHandlers>
+	</system.web>
+
 </configuration>
