--- a/src/Mod03-WebApplications.Thumbs&Watermarking/Mod03-WebApplications.ThumbsAndWatermarking.csproj
+++ b/src/Mod03-WebApplications.Thumbs&Watermarking/Mod03-WebApplications.ThumbsAndWatermarking.csproj
@@ -75,7 +75,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThumbsAndWaterMarkHandler.cs" />
     <None Include="ThumbsAndWatermarkHandler.cd" />
-    <None Include="WaterMarkHandlerFactory.cs" />
+    <Compile Include="WaterMarkHandlerFactory.cs" />
     <Compile Include="Config\ThumbsAndWatermarkingStaticConfig.cs" />
   </ItemGroup>
   <ItemGroup>
