--- a/src/Mod03-FinalWork/Mod03-ChelasMovies.WebApp/Web.config
+++ b/src/Mod03-FinalWork/Mod03-ChelasMovies.WebApp/Web.config
@@ -6,13 +6,15 @@
 
 <configuration>
   <connectionStrings>
-    <add name="ApplicationServices"
+    <!--<add name="ApplicationServices"
          connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true"
+         providerName="System.Data.SqlClient" />-->
+	  <add name="ApplicationServices"
+         connectionString="data source=.\SQLEXPRESS;Database=Movies;Trusted_Connection=true"
          providerName="System.Data.SqlClient" />
-    <!--<add name="MovieDBContext"
-     connectionString="Server=.\sqlexpress2008;
-     Database=Movies;Trusted_Connection=true;User Instance=false"
-     providerName="System.Data.SqlClient" />-->
+	  <add name="MovieDBContext"
+		 connectionString="data source=.\SQLEXPRESS;Database=Movies;Trusted_Connection=true"
+		 providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <appSettings>
