--- a/src/Mod03-FinalWork/Mod03-ChelasMovies.WebApp/Mod03-ChelasMovies.WebApp.csproj
+++ b/src/Mod03-FinalWork/Mod03-ChelasMovies.WebApp/Mod03-ChelasMovies.WebApp.csproj
@@ -70,6 +70,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
+    <Compile Include="Models\SortingModel.cs" />
     <Compile Include="Models\Extensions.cs" />
     <Compile Include="Models\MoviesInitializer.asax.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -132,7 +133,9 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\modernizr-1.7.js" />
     <Content Include="Scripts\modernizr-1.7.min.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -187,6 +190,10 @@
       <Project>{208B1EAA-EBE5-4202-891D-3D32A0DAE1E3}</Project>
       <Name>Mod03-ChelasMovies.DomainModel</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Mod03-ChelasMovies.Rep\Mod03-ChelasMovies.Rep.csproj">
+      <Project>{1C039CE6-EB9A-4748-BF01-B8B371443591}</Project>
+      <Name>Mod03-ChelasMovies.Rep</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Comments\Create.cshtml" />
@@ -198,6 +205,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Movies\Edit.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Shared\_Navigation.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
