--- a/src/Mod03-FinalWork/Mod03-ChelasMovies.DomainModel/Mod03-ChelasMovies.DomainModel.csproj
+++ b/src/Mod03-FinalWork/Mod03-ChelasMovies.DomainModel/Mod03-ChelasMovies.DomainModel.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Entity" />
+    <Reference Include="System.Web" />
+    <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.Web.Mvc, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -61,6 +63,8 @@
     <Compile Include="Movie.cs" />
     <Compile Include="MovieDBContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="User.cs" />
+    <Compile Include="Utils\SearchableAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
