--- a/src/Mod03-FinalWork/Mod03-ChelasMovies.DomainModel/Mod03-ChelasMovies.DomainModel.csproj
+++ b/src/Mod03-FinalWork/Mod03-ChelasMovies.DomainModel/Mod03-ChelasMovies.DomainModel.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
     <Compile Include="Utils\SearchableAttribute.cs" />
+    <Compile Include="Utils\SearchCollection.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
